fix(): fix offline
